kubernetes/02-apps/bazarr/deployment.yaml
# kubernetes/02-apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: homelab
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: media-movies-direct # Modificado
              mountPath: /movies
            - name: media-tv-direct     # Modificado
              mountPath: /tv
          # (Sondas Comentadas Temporalmente)
          # livenessProbe:
          #   httpGet:
          #     path: / 
          #     port: http
          #   initialDelaySeconds: 30
          #   periodSeconds: 15
          #   timeoutSeconds: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   timeoutSeconds: 5
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: media-movies-direct # Modificado
          hostPath:
            path: /mnt/storage2tb/homelab/media/movies # Montaje directo
            type: Directory
        - name: media-tv-direct     # Modificado
          hostPath:
            path: /mnt/storage2tb/homelab/media/tv     # Montaje directo
            type: Directory
