kubernetes/02-apps/bazarr/ingress.yaml
# kubernetes/02-apps/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
  namespace: homelab
  labels:
    app.kubernetes.io/name: bazarr
  # annotations: # Eliminada la anotación kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik # Añadido/Corregido
  rules:
    - host: bazarr.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  name: http # O number: 6767
